--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
+    <!-- <link
       rel="icon"
-      href="https://static-00.iconduck.com/assets.00/smile-emoji-1024x1024-97hi2xo9.png"
+      --
     />
+    C:\Users\canar\OneDrive\Desktop\Kanban-Board\public\favi.JPG /> -->
+
+    <link rel="icon" href="%PUBLIC_URL%/favi.JPG" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Interactive-Kanban_Board</title>
+    <title>Interactive-Kanban-Board</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
